# coverage

./: .gitignore  CMakeLists.txt  CMakeLists_gtest.txt  README.md
.github/workflows/: CalcCoverage.yml
mst/: algorithm.h  mcore.h
mtmath/: algorithm.cpp  algorithm.hpp
src/: algorithm.cpp
tests/: CMakeLists.txt  algorithm.cpp
